--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -61,6 +61,7 @@
     <!--load the tasks module-->
     <script type="text/javascript" src="tasks/tasks.client.module.js"></script>
     <script type="text/javascript" src="tasks/controllers/tasks.client.controller.js"></script>
+    <script type="text/javascript" src="tasks/services/tasks.client.service.js"></script>
 <script type="text/javascript" src="application.js"></script>
 
 </body>
