--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,13 +32,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">Dashboard</a>
-            </li>
-            <li>
-                <a href="#">Shortcuts</a>
-            </li>
-            <li>
-                <a href="#">Overview</a>
+                <a href="https://github.com/airasheed" target="_blank">Source</a>
             </li>
         </ul>
     </div>
