added remove completed behavior

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/airasheed" target="_blank">Source</a>
+                <a href="https://github.com/airasheed/todo-mvc" target="_blank">Source</a>
             </li>
         </ul>
     </div>
